--- a/home.css
+++ b/home.css
@@ -2,7 +2,6 @@ html, body {
     min-width: 375px;
     max-width: 375px;
     margin: 0 auto;
-    padding: 16px;
 }
 
 #main {
@@ -11,6 +10,7 @@ html, body {
     flex-direction: column;
     align-items: center;
     align-content: center;
+    padding: 16px;
 }
 #frontpage {
     display: flex;
@@ -20,20 +20,36 @@ html, body {
     align-content: center;
     text-align: center;
     margin: 0, auto;
+    padding-top: 100%;
 }
 
 #logoimg {
-    padding-bottom: 15%;
+    padding-top: 10%;
+    padding-bottom: 10%;
+    width: 50%;
+    height: 50%;
 }
 
 #titleimg {
-    width: 150%;
-    height: 150%;
+    width: 190%;
+    height: 190%;
 }
 
 .slogan {
     font-family: 'Montserrat', sans-serif;
-    font-size: 40px;
+    font-size: 325%;
     color: #50514F;
-
 }
+
+#scrollarrows {
+    width: 32%;
+    height: 32%;
+    padding-top: 75%;
+}
+
+#scrolltext {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 190%;
+}
+
+
