--- a/home.css
+++ b/home.css
@@ -10,7 +10,6 @@ html, body {
     flex-direction: column;
     align-items: center;
     align-content: center;
-    padding: 16px;
 }
 #frontpage {
     display: flex;
@@ -19,7 +18,6 @@ html, body {
     align-items: center;
     align-content: center;
     text-align: center;
-    margin: 0, auto;
     padding-top: 100%;
 }
 
@@ -37,19 +35,89 @@ html, body {
 
 .slogan {
     font-family: 'Montserrat', sans-serif;
+    font-weight: 100;
     font-size: 325%;
     color: #50514F;
 }
 
 #scrollarrows {
-    width: 32%;
-    height: 32%;
+    width: 35%;
+    height: 35%;
     padding-top: 75%;
 }
 
 #scrolltext {
     font-family: 'Montserrat', sans-serif;
-    font-size: 190%;
+    font-size: 200%;
+}
+
+#description {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+}
+
+#whatisit {
+    padding-top: 70%;
+    width: 200%;
+    height: 200%;
 }
 
 
+
+#box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-family: 'Montserrat', sans-serif;
+    background-color: aquamarine;
+    border-radius: 25%;
+    width: 850px;
+    height: 700px;
+    margin-top: 10%;
+}
+
+#details {
+    text-align: center;
+    font-size: 43px;
+    color: #50514F;
+}
+
+#clothes { 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    z-index: -1;
+}
+
+#pile {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    flex-shrink: 0;
+    margin-top: 19%;
+}
+
+#thread {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 200%;
+}
+
+#threadroll {
+    width: 100%;
+    height: 100%;
+    flex-shrink: 0;
+    justify-content: space-between;
+}
+
+#unwind {
+    font-family: 'Montserrat', sans-serif;
+    font-weight:900;
+    font-size: 350%;
+    justify-content: space-between;
+}
