index and css revised - 2nd style finished

--- a/style.css
+++ b/style.css
@@ -9,12 +9,12 @@ h2, h3, p {
 
 h2 {
   font-family: 'Lexend Giga', sans-serif;
-  font-size: 30px;
+  font-size: 1.875rem;
 }
 
 h3, p, a {
   font-family: 'Montserrat', sans-serif;
-  font-size: 18px;
+  font-size: 1.125rem;
   font-weight: bold;
 }
 
@@ -28,8 +28,23 @@ img {
   margin: 0 auto;
 }
 
+a {
+  text-decoration: none;
+  color: #000;
+  display: block;
+}
+
+a:active {
+  color: #102C37;
+}
+
+section {
+  width: 100%;
+  padding: 1rem;
+}
+
 .correctAns {
-  font-size: 64px;
+  font-size: 4rem;
   font-weight: bold;
 }
 
@@ -43,6 +58,99 @@ img {
 .row {
   flex-direction: row;
 }
+
+/* STYLE STARTS */
+
+.question {
+  margin-top: 125px;
+}
+
+.qHead {
+  width: 70%;
+  margin-bottom: 60px;
+}
+
+.qHeadW {
+  width: 65%;
+}
+
+.info_back {
+  min-width: 80%; 
+  min-height: 203px;
+  margin-bottom: 60px;
+}
+
+.options {
+  min-width: 77.77%;
+  max-width: 77.77%;
+  padding: none;
+  margin-bottom: 23px;
+}
+
+.options ul {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  padding: 0 2rem;
+}
+
+.options ul li {
+  width: 46%;
+  height: 4rem;
+  margin-right: 8%; 
+  margin-bottom: 8%;
+  border-radius: 20px;
+  box-shadow: 5px 5px 5px -1px rgba(0,0,0,0.25);
+  text-align: center;
+  line-height: 4rem;  
+}
+
+.options ul li:nth-child(2n){
+  margin-right: 0;
+}
+
+.options ul li a {
+  width: 100%; height: 100%;
+  display: block;
+  color: #000;
+  text-decoration: none;
+}
+
+.correctAns {
+  margin-bottom: 55px;
+}
+
+.wrongAns {
+  margin-top: 150px;
+}
+
+.oops {
+  margin-bottom: 68px;
+  font-weight: 300;
+}
+
+.sad_girl {
+  width:100%;
+  height: 100%;  
+}
+
+.sad_girl a{
+  margin-bottom: 68px;
+}
+
+.click_me {
+  width: 181px;  
+  margin: 0 auto;
+  margin-bottom: 145px;
+  margin-top: 40px;
+}
+
+
+
+
+
 
 
 
