--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ h2 {
   font-size: 1.875rem;
 }
 
-h3, p, a {
+h3, p, li {
   font-family: 'Montserrat', sans-serif;
   font-size: 1.125rem;
   font-weight: bold;
@@ -111,13 +111,6 @@ section {
   margin-right: 0;
 }
 
-.options ul li a {
-  width: 100%; height: 100%;
-  display: block;
-  color: #000;
-  text-decoration: none;
-}
-
 .correctAns {
   margin-bottom: 55px;
 }
@@ -146,6 +139,11 @@ section {
   margin-bottom: 145px;
   margin-top: 40px;
 }
+
+/* OFF */
+/* .off {
+  display: none;
+} */
 
 
 
