--- a/style.css
+++ b/style.css
@@ -1,6 +1,25 @@
 /* FONT */
 body, html {
-  margin: 0; padding: 0;  
+  margin: 0; padding: 0;
+  justify-content: center;
+  /* background-color: black; */
+}
+
+.main {
+  box-sizing: border-box;
+  background-color: lightblue;
+  flex-direction: column;
+  justify-content: center;
+  min-width: 375px;
+  max-width: 375px;
+  padding: 25px;
+  height: 100%;
+}
+
+section {
+  max-height: 100%;
+  min-height: 100%;
+  width: 100%;
 }
 
 h2, h3, p {
@@ -40,12 +59,12 @@ a:active {
 
 section {
   width: 100%;
-  padding: 1rem;
 }
 
 .correctAns {
   font-size: 4rem;
   font-weight: bold;
+  margin: 0;
 }
 
 .flex, .column, .row {
@@ -59,6 +78,15 @@ section {
   flex-direction: row;
 }
 
+.row > p {
+  display: flex;
+  align-items: center;
+  text-align: left;
+  margin-left: 20px;
+  margin-right: 20px;
+  width: 170px;
+}
+
 /* STYLE STARTS */
 
 .question {
@@ -66,7 +94,7 @@ section {
 }
 
 .qHead {
-  width: 70%;
+  width: 80%;
   margin-bottom: 60px;
 }
 
@@ -74,17 +102,17 @@ section {
   width: 65%;
 }
 
-.info_back {
+.q_img {
   min-width: 80%; 
   min-height: 203px;
   margin-bottom: 60px;
 }
 
 .options {
-  min-width: 77.77%;
-  max-width: 77.77%;
+  min-width: 80%;
+  max-width: 80%;
   padding: none;
-  margin-bottom: 23px;
+  margin-bottom: 150px;
 }
 
 .options ul {
@@ -93,30 +121,34 @@ section {
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  padding: 0 2rem;
+  padding: 0;
 }
 
 .options ul li {
   width: 46%;
   height: 4rem;
-  margin-right: 8%; 
-  margin-bottom: 8%;
+  margin-right: 8%;  
   border-radius: 20px;
   box-shadow: 5px 5px 5px -1px rgba(0,0,0,0.25);
   text-align: center;
   line-height: 4rem;  
+  background-color: #fff;
 }
 
 .options ul li:nth-child(2n){
   margin-right: 0;
 }
 
-.correctAns {
-  margin-bottom: 55px;
+.options ul li:first-child{
+  margin-bottom: 8%;
+}
+
+.options ul li:nth-child(2){
+  margin-bottom: 8%;
 }
 
 .wrongAns {
-  margin-top: 150px;
+  margin-top: 80px;
 }
 
 .oops {
@@ -127,23 +159,49 @@ section {
 .sad_girl {
   width:100%;
   height: 100%;  
-}
-
-.sad_girl a{
   margin-bottom: 68px;
 }
 
 .click_me {
-  width: 181px;  
+  width: 180px;  
   margin: 0 auto;
   margin-bottom: 145px;
   margin-top: 40px;
 }
 
-/* OFF */
-/* .off {
-  display: none;
-} */
+/* INDIVIDUAL STYLE */
+.waterQues {
+  position: relative;
+  top: 0; left: 0;
+}
+
+#wrongAns1 {
+  position: absolute;
+  top: 0; left: 0;
+  background-color: lightblue;
+}
+
+.decompQues {
+  position: relative;
+  top: 0; left: 0;
+}
+
+#wrongAns2 {
+  margin-top: 50px;
+  position: absolute;
+  top: 0; left: 0;
+  background-color: lightblue;
+}
+
+#correctAns1, #correctAns2 {
+  position: absolute;
+  bottom: 60px; 
+}
+
+
+
+
+
 
 
 
