--- a/style.css
+++ b/style.css
@@ -83,10 +83,14 @@ a:active {
   width: 170px;
 }
 
+.off {
+  display: none;
+}
+
 /* STYLE STARTS */
 
 .question {
-  margin-top: 125px;
+  margin-top: 100px;
 }
 
 .qHead {
