--- a/main.css
+++ b/main.css
@@ -13,8 +13,12 @@ body {
 }
 .flex-row {
     flex-direction: row;
+    justify-content: center;
 }
-.flex-row > p {
+.flex-column {
+    flex-direction: column;
+}
+.flex-row > p { /* for text that align to left */
     display: flex;
     align-items: center;
     text-align: left;
@@ -22,6 +26,12 @@ body {
     margin-right: 20px;
     width: 170px;
 }
+
+.alignRight { /* for text that align to right */
+    text-align: right;
+    margin-left: 20px;
+}
+
 .main {
     box-sizing: border-box;
     background-color: lightblue;
