--- a/main.css
+++ b/main.css
@@ -40,16 +40,23 @@ body {
     min-width: 375px;
     max-width: 375px;
     padding: 25px;
+    height: 120000px;
     background-image: linear-gradient( /* not sure how this would look on the full infographic, add more if needed */
         #CCE6F4, #fcdb58, #A6C48A,
         #CCE6F4, #fcdb58, #A6C48A, 
         #CCE6F4)
 }
-h1, h2 {
+h1 {
     text-align: center;
     font-family: 'Lexend Giga', sans-serif;
     font-weight: 400;
 }
+
+h2, h3 {
+    text-align: center;
+
+}
+
 p, .bolded { /* ".bolded" is what i used on text that should be bigger but in montserrat */
     text-align: center;
     font-family: 'Montserrat', sans-serif;
@@ -60,4 +67,16 @@ p, .bolded { /* ".bolded" is what i used on text that should be bigger but in mo
 
 .greyText {
     color: #50514F;
+}
+
+h2 {
+    font-family: 'Lexend Giga', sans-serif;
+    font-size: 1.875rem;
+  }
+  
+h3, p, li {
+font-family: 'Montserrat', sans-serif;
+font-size: 1.125rem;
+font-weight: bold;
+/* text-align: center; */
 }
