--- a/main.css
+++ b/main.css
@@ -40,7 +40,6 @@ body {
     min-width: 375px;
     max-width: 375px;
     padding: 25px;
-    height: 120000px;
     background-image: linear-gradient( /* not sure how this would look on the full infographic, add more if needed */
         #CCE6F4, #fcdb58, #A6C48A,
         #CCE6F4, #fcdb58, #A6C48A, 
@@ -57,12 +56,13 @@ h2, h3 {
 
 }
 
-p, .bolded { /* ".bolded" is what i used on text that should be bigger but in montserrat */
+p, .bolded {
     text-align: center;
     font-family: 'Montserrat', sans-serif;
+    font-weight: 500;
 }
 .spacingMargin {
-    margin: 50px 0 50px 0;
+    margin: 25px 0 25px 0;
 }
 
 .greyText {
@@ -73,10 +73,8 @@ h2 {
     font-family: 'Lexend Giga', sans-serif;
     font-size: 1.875rem;
   }
-  
-h3, p, li {
-font-family: 'Montserrat', sans-serif;
-font-size: 1.125rem;
-font-weight: bold;
-/* text-align: center; */
+  h3, li {
+    text-align: center;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bolder;
 }
