end section added

--- a/lastpage.css
+++ b/lastpage.css
@@ -1,9 +1,9 @@
-html, body{
+/* html, body{
     min-width: 375px;
     max-width: 375px;
-}
+} */
 
-#main{
+/* #main{
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -13,35 +13,46 @@ html, body{
     padding: 16px;   
     background-color: rgb(200, 230, 180);
     position: relative;
-}
+} */
 
-h1, h2{
+/* h1, h2{
     text-align: center;
     font-family: 'Lexend Giga', sans-serif;
     font-weight: 400;
-}
+} */
 
-h3{
+/* h3{
     font-family:'Montserrat', sans-serif ;
     font-weight: lighter;
     font-size: 23px;
-}
+} */
 
-p {
+/* p {
     text-align: center;
     font-family: 'Montserrat', sans-serif;
     font-size:large
-}
+} */
 
-.flex-row{
+/* .flex-row{
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     text-align: center;   
     margin:35px 0px;
+} */
+
+#shrinkImage {
+    width: 55%;
 }
-.item1{
+
+.list > div > img, .list > img {
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
+}
+
+/* .item1{
     text-align: right;
 }
 
@@ -49,7 +60,7 @@ p {
     padding-left: 0px;
     padding-right: 50px;
     text-align: left;
-}
+} */
 
 .boldText1{
     font-size: xx-large;
@@ -62,51 +73,17 @@ p {
 }
 
 .world{
-    margin-bottom: 140px;
+    margin-top: 50px;
+    margin-bottom: 50px;
     position: relative;
+    justify-content: center;
+    align-items: center;
 }
 
 .globeImage{
-    position: relative;
-    z-index: 2;
+    position: absolute;
+    margin: 0 auto;
     animation: rotation 15s infinite linear;
-}
-
-.arrowImage{
-    position: relative;
-    top: 260px;
-    z-index: 1;
-}
-
-#lightbulb{
-    width: 90px;
-}
-
-.icon{
-    width: 60px;
-}
-
-#reVamp{
-   margin-right: 130px;
-}
-
-.spacing{
-    margin-top: 80px;
-    margin-bottom: -20px;
-}
-.spacing2{
-    margin-top: 80px;
-    margin-bottom: -175px;
-}
-.spacing3{
-    margin-top: 130px;
-    margin-bottom: 40px;
-}
-.spacing4{
-    margin-bottom: 50px;
-}
-.spacing5{
-    margin-bottom: 130px;
 }
 
 @keyframes rotation {
@@ -117,3 +94,23 @@ p {
         transform: rotate(359deg);
     }
 }
+
+/* .arrowImage{
+    position: relative;
+    top: 260px;
+    z-index: 1;
+} */
+
+/* #lightbulb{
+    width: 90px;
+}
+
+.icon{
+    width: 60px;
+} */
+
+#reVamp{
+   margin-right: 130px;
+}
+
+
