--- a/home.css
+++ b/home.css
@@ -81,7 +81,7 @@
 /* this section is about clothing waste */
 
 #clothing-waste {
-    margin-top: 20%;
+    margin: 0 40px 0 40px;
 }
 
 /* this is the garbage truck area*/
