--- a/css/lastpage.css
+++ b/css/lastpage.css
@@ -67,10 +67,10 @@
     font-weight: bolder;
 }
 
-.boldText2{
+/* .boldText2{
     font-weight:bolder;
     font-size:21px;
-}
+} */
 
 .world{
     margin-top: 50px;
