--- a/css/main.css
+++ b/css/main.css
@@ -10,17 +10,33 @@ body {
 }
 .main {
     box-sizing: border-box;
-    background-color: lightblue;
+    /* background-color: lightblue; */
     flex-direction: column;
     justify-content: center;
+    position: relative;
+    overflow: hidden;
     min-width: 375px;
     max-width: 375px;
+    padding: 0 25px 0 25px;
     background-image: linear-gradient( /* not sure how this would look on the full infographic, add more if needed */
-        #CCE6F4, #fcdb58, #A6C48A,
+        #CCE6F4, #fcdb58, #fcdb58, #A6C48A,
         #CCE6F4, #fcdb58, #A6C48A, 
         #CCE6F4)
 }
 
+#gradient {
+    position: relative;
+    left: -25px;
+    background-image: linear-gradient(#CCE6F4, #CCE6F4, #fcdb58);
+    min-width: 375px;
+    max-width: 375px;
+    padding: 25px;
+    justify-content: center;
+    box-sizing: border-box;
+    flex-direction: column;
+    margin: 0 auto;
+    
+}
 /* ====================================================
     flex stuff
 ==================================================== */
