--- a/css/quiz.css
+++ b/css/quiz.css
@@ -150,7 +150,7 @@ a:active {
 }
 
 .wrongAns {
-  margin-top: 80px;
+  /* margin-top: 80px; */
 }
 
 .oops {
@@ -198,7 +198,7 @@ a:active {
 }
 
 #wrongAns2 {
-  margin-top: 20px;
+  /* margin-top: 20px; */
   position: absolute;
   top: 0; left: 0;
   /* background-color: lightblue; */
